# goTest

./: .gitignore
007/html_test/: index.html
01_goBase/my_utils/: CreatFile.go  ReadExcel.go
01_goBase/src/_2021_08/: 01_Hello.go  02_Time.go  03_IF.go  04_calcRes.go  05_random.go  06_Printf.go  07_Func.go  08_Error.go  09_str.go  10_Point.go  2021_08.go  main.go
01_goBase/src/animal/: animal.go
01_goBase/src/date/: date.go
01_goBase/src/install/: main.go
01_goBase/src/main/: 02_Time.go  03_IF.go  04_calcRes.go  05_random.go  06_Printf.go  08_Error.go  11_const.go  12_testKeyboard.go  13_arr.go  14_readFile.go  15_OsArgs.go  16_varFunc.go  17_map.go  18_struct.go  19_aba.go  20_nil.go  21_test3.go  21_type.go  22_封装.go  23_接口.go  24_goid.go  25_channel.go  26_Stringer.go  27_defer.go  28_pringFile.go  29_goroutineOrDefer.go  30_main_test.go  data.txt  main.go
01_goBase/src/o2108/: index.html  (+4 more)
02_pyBase/game/: testZW.py
03_java/: build.gradle  settings.gradle
04_cpp/letcod/: CMakeLists.txt
04_cpp/letcod/base/01_1711/: 01_testC.c  1771_大餐计数.txt  main.cpp
04_cpp/letcod/base/01_1717/: main.cpp
04_cpp/letcod/base/01_test/: main.c
04_cpp/letcod/base/02_1717/: 1717. 删除子字符串的最大得分.txt  main.cpp
04_cpp/letcod/base/03_1696/: main.cpp  跳跃游戏.txt
04_cpp/letcod/base/04_1695/: main.cpp  删除子数组的最大得分.txt
04_cpp/letcod/base/05_1702/: main.cpp
04_cpp/letcod/base/06_1680/: main.cpp  连接连续二进制数字.txt
04_cpp/letcod/base/07_1674/: main.cpp  使数组互补的最少操作次数.txt
04_cpp/letcod/base/08_0005/: main.cpp
conf/: server.xml
java/mytest/: Servlet.java
normol/: git操作.txt  sync.txt  问题1.txt
normol/ai_ru/: 001_引言.txt
normol/gxx2/: gxx.txt
normol/note/: 21_12_16_gradle.txt  Explain解析.txt  leetcode.txt  leetcode2.txt  leetcode3.txt  question.txt  索引失效.txt
normol/properties/: MyLangCollector.java  _12_14_loadLang2.java
(+158 files in other folders)
